all services developed

--- a/backend/patient/src/main/resources/application.properties
+++ b/backend/patient/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 app.jwt.secret=7qbq6zTyZ8bC3dA2wS7gN1mK9jF0hL4tUoP6iBvE3nG8xZaQrY7cW2fA
-app.jwt.expiration=3600000
+app.jwt.expiration-ms=3600000
 
 logging.level.com.hms.patient=DEBUG
 logging.file.name=logs/patient-service.log
